# EpisteinFiles

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: alex-azure.agent.md  alex-builder.agent.md  alex-m365.agent.md  alex-researcher.agent.md  alex-validator.agent.md
.github/config/: alex-manifest.json
.github/episodic/: 2026-02-22-architecture-infrastructure.md
.github/episodic/peripheral/: file-observations.json
db/: init.sql
docs/: architecture-proposal.md  portal-setup.md
src/: __init__.py  app.py  config.py  main.py
src/db/: __init__.py  models.py  session.py
src/ingest/: __init__.py  jmail.py  local.py
src/nlp/: __init__.py  embedder.py  extractor.py  ner.py  redaction.py
src/web/: __init__.py
src/web/routes/: dashboard.py  documents.py  entities.py  graph.py  search.py  sources.py
src/web/static/: styles.css
src/web/templates/: base.html  dashboard.html  document.html  entities.html  entity_profile.html  graph.html  search.html  search_results.html  sources.html
src/worker/: __init__.py  main.py
tests/: conftest.py
