[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "epstein-analyzer"
version = "0.1.0"
description = "Analytical semantic tool for canvassing the Epstein files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EpsteinFiles Project"}
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
    "Pillow>=10.0",
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "networkx>=3.3",
    "click>=8.1",
    "rich>=13.7",
    "tqdm>=4.66",
    "aiofiles>=24.1",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
epstein = "src.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
