[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "epstein-analyzer"
version = "0.1.0"
description = "Web-based analytical semantic tool for canvassing the Epstein files"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "EpsteinFiles Project"}
]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    # HTTP client
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    # PDF & OCR
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
    "Pillow>=10.0",
    # NLP
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    # Database
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pgvector>=0.3",
    # Azure
    "azure-storage-blob>=12.23",
    "azure-storage-queue>=12.12",
    # Graph analysis
    "networkx>=3.3",
    # Utilities
    "rich>=13.7",
    "tqdm>=4.66",
    "aiofiles>=24.1",
    "pandas>=2.2",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",  # for TestClient
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
